fix: arreglar monto total cuando las transacciones se repiten